Add icons to illustrate form better

--- a/adopt.html
+++ b/adopt.html
@@ -51,16 +51,30 @@
     </section>
 
     <section id="form">
+      <div class="grid icons-container max-width text-center">
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+          <h2 class="red giga push-1-2">Inquire</h2>
+          <img class="img-flex" src="images/icon-inquire.svg" alt="step 1 inquire icon">
+        </div>
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+          <h2 class="red giga push-1-2">Visit</h2>
+          <img class="img-flex" src="images/icon-visit.svg" alt="step 2 visit icon">
+        </div>
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+          <h2 class="red giga push-1-2">Bring Home</h2>
+          <img class="img-flex" src="images/icon-home.svg" alt="step 3 bring home icon">
+        </div>
+      </div>
       <div class="grid form-container max-width">
         <div class="unit xs-1 s-1 m-1 l-1 xl-1">
 
-          <form class="" action="index.html" method="POST">
+          <!-- <div class="form-intro gutter-2 pad-bottom">
+            <h2 class="red tera push-1-2">Inquire about adopting an animal</h2>
+            <p class="push-1-4">Please drop by during visiting hours to find the right animal for your home.</p>
+            <p class="micro">If you are not in the position to adopt an animal, <span class="italic">please consider <a class="red" href="rescues.html">sponsoring</a> one who has made Big Sky their permanent home.</span></p>
+          </div> -->
 
-            <div class="form-intro gutter-2 pad-t-2">
-              <h2 class="red tera push-1-2">Inquire about adopting an animal</h2>
-              <p class="push-1-4">Please drop by during visiting hours to find the right animal for your home.</p>
-              <p class="micro">If you are not in the position to adopt an animal, <span class="italic">please consider <a class="red" href="rescues.html">sponsoring</a> one who has made Big Sky their permanent home.</span></p>
-            </div>
+          <form class="" action="index.html" method="POST">
 
             <fieldset class="wrapper push-0">
               <legend class="giga gutter-1-2 pad-top pad-b-1-8 red">Personal contact information</legend>
