--- a/adopt.html
+++ b/adopt.html
@@ -44,8 +44,8 @@
     <section id="content">
       <div class="grid banner-container banner-rescue">
         <div class="unit banner-wrapper">
-          <h1 class="absolute island">Considering adoptiong an animal?</h1>
-          <p class="absolute island">With a few exceptions, most of the animals at the Big Sky Ranch Animal Sanctuary are available for adoption.</p>
+          <h1 class="absolute gutter">Considering adoptiong an animal?</h1>
+          <p class="absolute gutter">With a few exceptions, most of the animals at the Big Sky Ranch Animal Sanctuary are available for adoption.</p>
         </div>
       </div>
     </section>
@@ -77,7 +77,7 @@
           <form class="" action="index.html" method="POST">
 
             <fieldset class="wrapper push-0">
-              <legend class="giga gutter-1-2 pad-top pad-b-1-8 red">Personal contact information</legend>
+              <legend class="giga gutter-1-2 pad-t-2 pad-b-1-8 red">Personal contact information</legend>
 
               <div class="grid grid-middle">
                 <div class="unit gutter-1-2 xs-1 s-1 m-1-2 l-1-2 xl-1-2 pad-bottom pad-t-1-4">
@@ -159,10 +159,10 @@
               <legend class="giga pad-top pad-b-1-2 red">Are you considering this adoption to be for livestock?</legend>
               <div class="grid grid-middle">
                 <div class="unit pad-bottom">
-                  <input type="radio" id="drive-y" name="check-2">
-                  <label for="drive-y">Yes</label>
-                  <input type="radio" id="drive-n" name="check-2">
-                  <label for="drive-n">No</label>
+                  <input type="radio" id="adopt-y" name="check-2">
+                  <label for="adopt-y">Yes</label>
+                  <input type="radio" id="adopt-n" name="check-2">
+                  <label for="adopt-n">No</label>
                 </div>
               </div>
             </fieldset>
@@ -206,14 +206,14 @@
               </div>
             </fieldset>
 
-            <fieldset class="wrapper gutter-1-2 pad-b-2">
+            <fieldset class="wrapper gutter-1-2 pad-bottom">
               <legend class="giga pad-top pad-b-1-2 red">Please let us know if you have any comments or concerns <span class="italic">(optional)</span></legend>
               <div class="unit">
                 <textarea id="questions" name="name" rows="8" cols="80"></textarea>
               </div>
             </fieldset>
 
-            <div class="text-center pad-b-2 pad-top tera">
+            <div class="text-center pad-b-2 pad-t-0 tera">
               <button class="btn" type="submit">Inquire</button>
             </div>
           </form>
