--- a/rescues.html
+++ b/rescues.html
@@ -124,8 +124,8 @@
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 connect">
         <h3 class="kilo bold text-upper push-1-2">Stay Connected</h3>
-        <a href="https://www.facebook.com/BigSkyRanchAnimalSanctuary"><img class="i-48 push-r-1-2" src="images/icon-facebook.svg" alt="Facebook link icon"></a>
-        <a href="https://twitter.com/BigSkyRanch2"><img class="i-48 push-r-1-2" src="images/icon-twitter.svg" alt="Twitter link icon"></a>
+        <a href="https://www.facebook.com/BigSkyRanchAnimalSanctuary">Facebook</a>
+        <a href="https://twitter.com/BigSkyRanch2">Twitter</a>
       </div>
     </div>
   </footer>
