--- a/rescues.html
+++ b/rescues.html
@@ -52,48 +52,54 @@
 
     <section id="animals">
       <div class="grid grid-stretch max-width pet-container">
-        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex pet" src="images/chihuahua-resting.jpg" alt="A chihuahua resting on a blanket">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
+          <img class="img-flex" src="images/chihuahua-resting.jpg" alt="A chihuahua resting on a blanket">
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h2>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Milo">Adopt Me</a>
+          <p class="push-1-4 milli">Chihuahua | Male | 6 years old</p>
+          <ul>
+            <li>Energetic</li>
+            <li>Loves to chase squirrels</li>
+            <li>Well-trained</li>
+          </ul>
+          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Milo">Inquire About Me</a>
         </div>
 
-        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/dog-outside.jpg" alt="A black dog with brown eyebrows looking at the camera">
-          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Jeep</h2>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jeep">Adopt Me</a>
-        </div>
-
-        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/majestic-horse.jpg" alt="A horse with air-brushed hair looking at the camera">
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h2>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jack">Adopt Me</a>
+          <p class="push-1-4 milli">Haflinger Horse | Male | 3 years old</p>
+          <ul>
+            <li>Loves apples</li>
+            <li>Is happiest around other horses</li>
+            <li>Strong-built</li>
+          </ul>
+          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Jack">Inquire About Me</a>
         </div>
       </div>
 
       <div class="grid grid-stretch max-width pet-container">
-        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/brown-cat.jpg" alt="A cat with big eyes looking at the camera">
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Stacey</h2>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Stacey">Adopt Me</a>
+          <p class="push-1-4 milli">America Short Hair | Female | 5 years old</p>
+          <ul>
+            <li>Loves to cuddle</li>
+            <li>Thrives on catnip</li>
+            <li>Very clean</li>
+          </ul>
+          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Stacey">Inquire About Me</a>
         </div>
 
-        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/dog-mutt.jpg" alt="A dirty dog in a pen">
-          <h2 class="push-1-4 giga red text-upper pad-t-1-2">Faun</h2>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Faun">Adopt Me</a>
-        </div>
-
-        <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pet gutter unit-content-distribute pad-b-2">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/pink-piglet.jpg" alt="A piglet with hay on her nose">
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Cassie</h2>
-          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Adopt Cassie">Adopt Me</a>
+          <p class="push-1-4 milli">Piglet | Female | 4 months old</p>
+          <ul>
+            <li>Behaves well around other animals</li>
+            <li>Loves to swim</li>
+            <li>Belly rubs are her favourite</li>
+          </ul>
+          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Cassie">Inquire About Me</a>
         </div>
       </div>
     </section>
@@ -118,7 +124,7 @@
         <ul class="block list-group push-0">
           <li><a href="index.html">Home</a></li>
           <li><a href="rescues.html">Our Animals</a></li>
-          <li><a href="adopt.html">Adopt</a></li>
+          <li><a href="Inquire about.html">Inquire about</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
