--- a/rescues.html
+++ b/rescues.html
@@ -53,7 +53,9 @@
     <section id="animals">
       <div class="grid grid-stretch max-width pet-container">
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/chihuahua-resting.jpg" alt="A chihuahua resting on a blanket">
+          <div class="embed embed-1by1">
+            <img class="img-flex embed-item" src="images/chihuahua-resting.jpg" alt="A chihuahua resting on a blanket">
+          </div>
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h2>
           <p class="push-1-4 milli">Chihuahua | Male | 6 years old</p>
           <ul>
@@ -61,11 +63,13 @@
             <li>Loves to chase squirrels</li>
             <li>Well-trained</li>
           </ul>
-          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Milo">Inquire About Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Milo">Inquire About Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/majestic-horse.jpg" alt="A horse with air-brushed hair looking at the camera">
+          <div class="embed embed-1by1">
+            <img class="img-flex embed-item" src="images/majestic-horse.jpg" alt="A horse with air-brushed hair looking at the camera">
+          </div>
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h2>
           <p class="push-1-4 milli">Haflinger Horse | Male | 3 years old</p>
           <ul>
@@ -73,13 +77,15 @@
             <li>Is happiest around other horses</li>
             <li>Strong-built</li>
           </ul>
-          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Jack">Inquire About Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Jack">Inquire About Me</a>
         </div>
       </div>
 
       <div class="grid grid-stretch max-width pet-container">
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/brown-cat.jpg" alt="A cat with big eyes looking at the camera">
+          <div class="embed embed-1by1">
+            <img class="img-flex embed-item" src="images/brown-cat.jpg" alt="A cat with big eyes looking at the camera">
+          </div>
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Stacey</h2>
           <p class="push-1-4 milli">America Short Hair | Female | 5 years old</p>
           <ul>
@@ -87,11 +93,13 @@
             <li>Thrives on catnip</li>
             <li>Very clean</li>
           </ul>
-          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Stacey">Inquire About Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Stacey">Inquire About Me</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 pet gutter unit-content-distribute pad-b-2">
-          <img class="img-flex" src="images/pink-piglet.jpg" alt="A piglet with hay on her nose">
+          <div class="embed embed-1by1">
+            <img class="img-flex embed-item" src="images/pink-piglet.jpg" alt="A piglet with hay on her nose">
+          </div>
           <h2 class="push-1-4 giga red text-upper pad-t-1-2">Cassie</h2>
           <p class="push-1-4 milli">Piglet | Female | 4 months old</p>
           <ul>
@@ -99,7 +107,7 @@
             <li>Loves to swim</li>
             <li>Belly rubs are her favourite</li>
           </ul>
-          <a href="Inquire about.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Cassie">Inquire About Me</a>
+          <a href="adopt.html" class="btn btn-ghost content-shrink" aria-label="Inquire about Cassie">Inquire About Me</a>
         </div>
       </div>
     </section>
@@ -124,7 +132,7 @@
         <ul class="block list-group push-0">
           <li><a href="index.html">Home</a></li>
           <li><a href="rescues.html">Our Animals</a></li>
-          <li><a href="Inquire about.html">Inquire about</a></li>
+          <li><a href="adopt.html">Adopt</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
