Add a image to embed
Even though I didn’t want any images added to my form

--- a/adopt.html
+++ b/adopt.html
@@ -159,38 +159,26 @@
             <fieldset class="wrapper gutter-1-2">
               <legend class="giga pad-top pad-b-1-2 red">Which animal(s) are you inquiring for?</legend>
               <div class="grid grid-stretch">
-                <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <div class="unit xs-1 s-1 m-1 l-1 xl-1">
                   <div class="push-1-4">
                     <input id="milo" type="checkbox">
                     <label for="milo">Milo</label>
                   </div>
 
                   <div class="push-1-4">
-                    <input id="jeep" type="checkbox">
-                    <label for="jeep">Jeep</label>
-                  </div>
-
-                  <div class="push-1-4">
                     <input id="jack" type="checkbox">
                     <label for="jack">Jack</label>
                   </div>
-                </div>
-                <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+
                   <div class="push-1-4">
                     <input id="stacey" type="checkbox">
                     <label for="stacey">Stacey</label>
                   </div>
 
                   <div class="push-1-4">
-                    <input id="faun" type="checkbox">
-                    <label for="faun">Faun</label>
-                  </div>
-
-                  <div class="push-1-4">
                     <input id="cassie" type="checkbox">
                     <label for="cassie">Cassie</label>
                   </div>
-
                 </div>
               </div>
             </fieldset>
@@ -201,6 +189,28 @@
                 <textarea id="questions" name="name" rows="8" cols="80"></textarea>
                 <label for="questions" aria-label="Text area to ask any questions" class="italic micro">We will answer you within 2 business days.</label>
               </div>
+            </fieldset>
+
+            <fieldset class="wrapper gutter-1-2 pad-bottom">
+              <legend class="giga pad-top pad-b-1-2 red">Security Question</legend>
+              <div class="grid">
+                <div class="unit xs-1-2 s-1-2 m-1-4">
+                  <h3 class="milli push-1-4">Is this a lama?</h3>
+                  <div class="embed embed-1by1 lama">
+                    <img class="img-flex embed-item" src="images/lama-derp.jpg" alt="This is a picture of a lama">
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid grid-middle">
+                <div class="unit pad-b-1-2 pad-top">
+                  <input type="radio" id="lama-y" name="check-3">
+                  <label for="lama-y">Yes</label>
+                  <input type="radio" id="lama-n" name="check-3">
+                  <label for="lama-n">No</label>
+                </div>
+              </div>
+
             </fieldset>
 
             <div class="text-center pad-b-2 pad-t-0 tera">
