Added a link to main
As per Markbot’s request.

--- a/adopt.html
+++ b/adopt.html
@@ -40,12 +40,13 @@
     </div>
   </header>
 
-  <main role="main">
+  <main role="main" id="main">
     <section id="content">
       <div class="grid banner-container banner-rescue">
         <div class="unit banner-wrapper">
           <h1 class="absolute gutter">Considering adoptiong an animal?</h1>
-          <p class="absolute gutter">With a few exceptions, most of the animals at the Big Sky Ranch Animal Sanctuary are available for adoption.</p>
+          <p class="absolute gutter">With a few exceptions, most of the animals at the Big Sky Ranch Animal Sanctuary are available for adoption. <a class="white milli" href="rescues.html">View Animals</a></p>
+          <!-- <a class="" href="rescues.html">View Animals</a> -->
         </div>
       </div>
     </section>
