--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
         <nav tabindex="0" id="nav" role="navigation">
-          <ul class="nav-wrapper list-group milli text-upper">
+          <ul class="nav-wrapper list-group micro text-upper">
             <li><a href="index.html">Home</a></li>
             <li><a href="rescues.html">Our Animals</a></li>
             <li><a href="adopt.html">Adopt</a></li>
