Add an underline effect to the footer links
As per a testing request

--- a/adopt.html
+++ b/adopt.html
@@ -196,7 +196,7 @@
               <legend class="giga pad-top pad-b-1-2 red">Security Question</legend>
               <div class="grid">
                 <div class="unit xs-1-2 s-1-2 m-1-4">
-                  <h3 class="milli push-1-4">Is this a lama?</h3>
+                  <h3 class="milli push-1-4">Is this a llama?</h3>
                   <div class="embed embed-1by1 lama">
                     <img class="img-flex embed-item" src="images/lama-derp.jpg" alt="This is a picture of a lama">
                   </div>
